
name:                fgl2
version:             0.1.0.0
synopsis:            A modern take on Martin Erwig's functional graph library
description:         An inductive representation of manipulating graph data structures.
license:             MIT
license-file:        LICENSE
author:              Skye E. Soss
maintainer:          skyler.soss@gmail.com
copyright:           2019 Skye Soss
category:            Data
build-type:          Simple
cabal-version:       >=1.10

tested-with:         GHC == 8.0.2

library
  exposed-modules:     Data.IGraph
                     , Data.IGraph.Lens
  build-depends:       base >=4.9 && <4.10
                     , containers
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
